-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 7.0.2
-
-
e4ae894c9 (12.0), ee48dba19 (12.0)
Create multiple sessions with some projects in them, and start switching between them. Switching seems to get slower.
Additionally scanning/parsing of already closed projects are not stopped if they are still in progress.
| For Gerrit Dashboard: QTCREATORBUG-27729 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 510057,9 | FileApiReader: Make stopping faster | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 510065,7 | FileApiReader: Make shutdown faster | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |